--- a/Event - Teestories2.0.html
+++ b/Event - Teestories2.0.html
@@ -137,21 +137,27 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/Events/Tee Stories/poster.jpg" alt="">
+                                <img src="assets/images/team/tr9.jpeg" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">Tee Stories</h3>
-                                    <p  align="justify">Tee Stories is a remarkable event organized by YUVA, REC . This event has been successfully conducted for the past three years making it our benchmark event . The primary objective of Tee Stories is to extend support and bring smiles to those brave individuals fighting cancer.
-
-                                        During the event, the public is invited to paint on white tee shirts, turning them into personalized works of art. These specially designed tee shirts are then distributed to cancer patients, each one carrying a unique and uplifting message.
-                                        The gesture of wrapping cancer patients in love, hope, and shared messages carries a powerful and positive impact. 
+                                    <h3 class="title">Tee Stories 2.0</h3>
+                                    <p  align="justify">Building on the success of Tee Stories 1.0, Tee Stories 2.0 continued the tradition of
+                                        spreading love and support to individuals battling cancer. Organized by YUVA, REC, this
+                                        event has become a benchmark in our annual calendar. For the past three years, Tee Stories
+                                        has stood as a beacon of hope for cancer patients.
                                         
-                                        Moreover, Tee Stories not only provides cancer patients with personalized gifts but also acts as a source of inspiration and encouragement. Each tee shirt is a symbol of the compassion and strength that the patients possess within themselves, reminding them that they are not alone in their fight.
-                                        Tee Stories exemplifies the incredible power of simple acts of kindness and the impact they can have on people's lives. It serves as a reminder that, despite the hardships cancer may bring, love, support, and hope can make a significant difference in the lives of those facing this daunting journey.
+                                        The event invites the public to paint on white tee shirts, transforming them into
+                                        personalized works of art. These specially designed tee shirts are then distributed to cancer
+                                        patients, each carrying a unique and uplifting message. This simple yet powerful gesture
+                                        provides comfort and encouragement to those on their cancer journey.
+                                        Tee Stories 2.0 not only gifts personalized tee shirts, but it also delivers a message of
+                                        strength and solidarity. It reaffirms that cancer patients are not alone in their fight,
+                                        surrounded by a community that cares deeply. The event showcases the remarkable impact
+                                        of small acts of kindness, reminding us all of the enduring power of compassion.
                                     </p>
                                 </div>
                             </div>
@@ -169,7 +175,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 process-column">
                         <div class="process-item text-center mb-40 wow fadeInUp" data-wow-delay=".25s">
                             <div class="icon">
-                                <img src="assets/images/icon/icon-8.png" alt="">
+                                <img src="assets/images/icon/icon-7.png" alt="">
                             </div>
                             <div class="text">
                                 <h4>Vertical</h4>
@@ -183,19 +189,19 @@
                                 <img src="assets/images/icon/icon-9.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Target Audience</h4>
-                                <p>Cancer fighting Warriors</p>
+                                <h4>Cause</h4>
+                                <p>Awareness and Empowerment of Cancer Patients</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 process-column">
                         <div class="process-item text-center mb-40 wow fadeInUp" data-wow-delay=".25s">
                             <div class="icon">
-                                <img src="assets/images/icon/icon-7.png" alt="">
+                                <img src="assets/images/icon/icon-8.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Cause</h4>
-                                <p>Awareness and Empowerment of Cancer Patients</p>
+                                <h4>Location</h4>
+                                <p>Thiruvanmaiyur Beach</p>
                             </div>
                         </div>
                     </div>
