--- a/Event - Walk Along 2.0.html
+++ b/Event - Walk Along 2.0.html
@@ -138,7 +138,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/Events/Walk Along 2.0/Walk along 2.0.jpg" alt="">
+                                <img src="assets/images/Events/Walk Along 2.0/Walk Along 2.0.jpg" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
