--- a/Event - Eco Arcade.html
+++ b/Event - Eco Arcade.html
@@ -371,7 +371,7 @@
                                         <img src="assets/images/portfolio/CGT 5.0(1).png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Chennai's Got Talent 5.0.html">Chennai's Got talent 5.0</a></h4>
+                                        <h4><a href="Event - CGT 5.0.html">Chennai's Got talent 5.0</a></h4>
                                         <p>August 2024</p>
                                     </div>
                                 </div>
