--- a/Initiatives.html
+++ b/Initiatives.html
@@ -184,7 +184,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/CGT 5.0(1).png" alt="Img">
+                                <img src="assets/images/portfolio/CGT 5.0.png" alt="Img">
                                 <a href="Event - CGT 5.0.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
