--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                 <a class="cat-link">05/05/2024</a>
                             </div>
                         </div>
-                    </div>
+                    <div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
